--- a/01_GuidedStepSupportFragment/app/src/main/res/layout/activity_main.xml
+++ b/01_GuidedStepSupportFragment/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     app:alignItems="center"
     app:flexDirection="column"
     app:justifyContent="center">
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ボタンを押下"
+        android:textColor="#000"
         android:textSize="24sp" />
 
     <Button
